--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dp Type</title>
 </head>
 <body>
-  <h1 class="do_type" title="Hello, my name is Erik Minimis.*I do creative">title</h1>
+  <h1 class="do_type" title="Hello, my name is Hong Gil Dong.*I do creative">title</h1>
   <p title="hello,* my name is kwon">type</p>
   
   <script src="./do_type.js"></script>
