--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1 class="do_type" title="Hello, my name is Hong Gil Dong.*I do creative">title</h1>
   <p title="hello,* my name is kwon">type</p>
   
-  <script src="./do_type.js"></script>
+  <script src="./do_type.min.js"></script>
   <script>
   
     // Initailize
