--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Dp Type</title>
+  <title>do_Type.js</title>
 </head>
 <body>
   <h1 class="do_type" title="Hello, my name is Hong Gil Dong.*I do creative">title</h1>
