--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>do_Type.js</title>
+  <style>
+    .do_type > span:last-child { 
+      border-right: 2px solid #333;
+      padding-right: 4px;
+    }
+  </style>
 </head>
 <body>
   <h1 class="do_type" title="Hello, my name is Hong Gil Dong.*I do creative">title</h1>
